# SSVIO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Visual_Reconstruct.code-workspace  map.pcd  removedata.sh
app/: CMakeLists.txt  run_feature_match.cpp  run_frame_jointment.cpp  run_g2o_optim.cpp  run_imu.cpp  run_saving_data.cpp  run_slam.cpp  run_visual_reconstruct.cpp
config/: default_conf.yaml
driver/: CMakeLists.txt  Xtion2_Driver.cpp  Xtion2_Driver.h  Xtion_Driver.cpp  Xtion_Driver.h
include/: Config.h  FMatch.h  Feature.h  FeatureMatching.h  Frame.h  Fusion.h  IMU.h  Init.h  Local.h  Loop.h  Map.h  MapPoint.h  Odometry.h  Optimizer.h  Reconstruct.h  Viewer.h  Visual_Odometry.h  config.h  g2o_optim.h  normal_include.h
src/: CMakeLists.txt  Config.cpp  FMatch.cpp  Feature.cpp  FeatureMatching.cpp  Frame.cpp  Fusion.cpp  IMU.cpp  Local.cpp  Loop.cpp  Map.cpp  MapPoint.cpp  Odometry.cpp  Optimizer.cpp  Reconstruct.cpp  Viewer.cpp  Visual_Odometry.cpp  config.cpp
